[css-grid] last-baseline shouldn't affect baseline alignment https://bugs.webkit.org/show_bug.cgi?id=224538

Patch by Ziran Sun <zsun@igalia.com> on 2021-04-21
Reviewed by Darin Adler and Javier Fernandez.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-grid/alignment/grid-baseline-004-expected.txt:

Source/WebCore:

According to discussions at https://github.com/w3c/csswg-drafts/issues/5293,
"align-self: last baseline" should not interfere with baseline alignment in
first row. This change is to make sure this is checked while deciding
whether an item participates in baseline alignment.

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::firstLineBaseline const):
(WebCore::RenderGrid::isBaselineAlignmentForChild const):

Canonical link: https://commits.webkit.org/236834@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276356 268f45cc-cd09-0410-ab3c-d52691b4dbfc